# dynamicsystems

./: CMakeLists.txt  colormaps.hpp  compute.cpp  compute.hpp  gui.cpp  hello.cpp  main.cpp  picture.cpp  picture.hpp
Measurements/: measurements_RAJ .ods  measurements_RAJ_no_break_cond.ods
